add github actions cdk deploy

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="author" content="Sara Massoud">
   <link rel="manifest" href="manifest.json" />
 
-  <title>Touch Grass - Syracuse</title>
+  <title>Syracuse Parks & Art</title>
 </head>
 
 <body>
